--- a/config.toml
+++ b/config.toml
@@ -37,8 +37,39 @@ theme = "hugo-elate-theme"
   [params.intro]
   title = "Unsere Arbeiten"
   description = ""
-  
 
+  [[params.intro.item]]
+  col_size = "col-12 col-sm-4"
+  categorie = "Branding"
+  title = "RUVIDO – einfach stark!"
+  description = "Eine umfassende Image- und Marketingkampagne von der Strategie bis zum Werbe-Truck."
+  content_url = "ruvido"
+  content =  '<p style="margin-left:0cm; margin-right:0cm"><span style="font-size:11pt"><span style="font-family:Calibri,sans-serif"><strong>Ruvido - einfach stark!</strong></span></span></p><p style="margin-left:0cm; margin-right:0cm"><span style="font-size:11pt"><span style="font-family:Calibri,sans-serif">Elektroofenschmelzgestein, kurz EOS, ist ein qualit&auml;tsgepr&uuml;fter Recyclingbaustoff, welcher seit Jahren erfolgreich als ressourcenschonendes Kiesersatzmaterial mit vielen Einsatzm&ouml;glich im Hoch- und Tiefbau eingesetzt wird. EOS ist 100% mineralisch und &uuml;berzeugt durch seine hervorragenden Eigenschaften und das vorteilhafte Preisleistungsverh&auml;ltnis. Um EOS als werthaltiges Produk positionieren zu k&ouml;nnen, durften wir eine umfassende Image- und Marketingstrategie erarbeiten. Folgende Dienstleistungen haben wir erbracht:</span></span></p><p style="margin-left:0cm; margin-right:0cm"><span style="font-size:11pt"><span style="font-family:Calibri,sans-serif"><strong>Namensgebung und Claim</strong></span></span><br /><span style="font-size:11pt"><span style="font-family:Calibri,sans-serif">Um ein Produkt erfolgreich zu vermarkten, ben&ouml;tigt es einen geeigneten Namen. Gemeinsam mit unserem Kunden haben wir verschiedene Vorschl&auml;ge diskutiert und gepr&uuml;ft. Am Ende hat sich der Name <strong>Ruvido</strong> durchgesetzt. Beim Claim haben wir uns f&uuml;r &laquo;einfach stark&raquo; entschieden. Dies insbesondere auch im Zusammenhang mit dem Markenbotschafter (siehe unten).</span></span></p><p><span style="font-size:11pt"><span style="font-family:Calibri,sans-serif"><strong>Logo, CD und Website</strong></span></span><br /><span style="font-size:11pt"><span style="font-family:Calibri,sans-serif">Entscheidend im Markenaufbau und der Kommunikation ist der grafische Auftritt. Wir haben sowohl Logo als auch alle übrigen grafischen Auftritte entwickelt. Auch der Webauftritt <span style="color:#0563c1"><u><a href="http://www.ruvido.ch" style="color:#0563c1; text-decoration:underline">www.ruvido.ch</a></u></span> stammt aus der Feder der Baukoma-Marketimpact AG</span></span></p><p><span style="font-size:11pt"><span style="font-family:Calibri,sans-serif"><strong>Markenbotschafter</strong></span></span><br /><span style="font-size:11pt"><span style="font-family:Calibri,sans-serif">Mit dem Schwinger Remo K&auml;ser konnte man den idealen Markenbotschafter gewinnen. Nicht nur, dass er als Schwinger hervorragend mit dem Claim harmoniert, seine Familie ist seit langem mit der Stahl Gerlafingen AG verbunden. Bereits sein Urgrossvater hat im damaligen Von-Roll-Stahlwerk gearbeitet. Sein Vater Bruno K&auml;ser war 41 Jahre f&uuml;r die Stahl Gerlafingen AG t&auml;tig.</span></span></p><p><span style="font-size:11pt"><span style="font-family:Calibri,sans-serif"><span style="font-size:11pt"><span style="font-family:Calibri,sans-serif"><strong>Werbeartikel</strong></span></span></span></span><br /><span style="font-size:11pt"><span style="font-family:Calibri,sans-serif">Streuartikel bieten eine hervorragende M&ouml;glichkeit, die Marke breit zu streuen und die Wahrnehmung zu steigern. Zu diesem Zweck durften wir Ruvido-Kugelschreiber und Tragtaschen produzieren.</span></span></p>'
+  button = "Get In Touch"
+  icon = "icon-bulb"
+  img = "img/references/ruvido.jpg"
+  
+  [[params.intro.item]]
+  col_size = "col-7"
+  categorie = "Event"
+  title = "Building-Award"
+  description = "Wir erledigen für unseren Kunden die Organisation, die Sponsorensuche, das Drehbuch und eigentlich den ganzen Event."
+  content_url = "buildingaward"
+  content =  '<p style="margin-left:0cm; margin-right:0cm"><strong><span style="font-size:11pt"><span style="font-family:Calibri,sans-serif">Building-Award &ndash; Die Auszeichnung f&uuml;r den Ingenieur am Bau</span></span></strong></p><p style="margin-left:0cm; margin-right:0cm"><span style="font-size:11pt"><span style="font-family:Calibri,sans-serif">Der Building-Award wird alle zwei Jahre ausgetragen, 2019 zum dritten Mal. Bewertet und ausgezeichnet werde herausragende, besonders bemerkenswerte und innovative Ingenieursleistungen am Bau. Rund 800 G&auml;ste werden am 6. Juni 2019 im KKL erwartet, wenn die grosse Preisverleihung stattfindet.</span></span></p><p style="margin-left:0cm; margin-right:0cm"><span style="font-size:11pt"><span style="font-family:Calibri,sans-serif">Im Auftrag der Stiftung bild<i>ing</i> sind wir f&uuml;r die komplette Organisation zust&auml;ndig. Die Preisverleihung selber ist nur ein kleiner Teil. Rund 2 Jahre dauert die Vorlaufzeit. Sponsorensuche- und Betreuung, Ausschreibung, Wettbewerbsphase, Eingabenaufbereitung, Drucksachen (darunter ein rund 80-seitiges Programmheft), Drehbuch, Showclips, Ticketing und vieles mehr geh&ouml;ren zu unseren Aufgaben.</span></span></p>'
+  button = "Get In Touch"
+  icon = "icon-bulb"
+  img = "img/references/buildingaward2.jpg"
+  
+  [[params.intro.item]]
+  col_size = "col-4"
+  categorie = "Event"
+  title = "Building-Award"
+  description =""
+  content_url = "buildingaward"
+  content =  ''#'<p style="margin-left:0cm; margin-right:0cm"><strong><span style="font-size:11pt"><span style="font-family:Calibri,sans-serif">Building-Award &ndash; Die Auszeichnung f&uuml;r den Ingenieur am Bau</span></span></strong></p><p style="margin-left:0cm; margin-right:0cm"><span style="font-size:11pt"><span style="font-family:Calibri,sans-serif">Der Building-Award wird alle zwei Jahre ausgetragen, 2019 zum dritten Mal. Bewertet und ausgezeichnet werde herausragende, besonders bemerkenswerte und innovative Ingenieursleistungen am Bau. Rund 800 G&auml;ste werden am 6. Juni 2019 im KKL erwartet, wenn die grosse Preisverleihung stattfindet.</span></span></p><p style="margin-left:0cm; margin-right:0cm"><span style="font-size:11pt"><span style="font-family:Calibri,sans-serif">Im Auftrag der Stiftung bild<em>ing </em>sind wir f&uuml;r die komplette Organisation zust&auml;ndig. Die Preisverleihung selber ist nur ein kleiner Teil. Rund 2 Jahre dauert die Vorlaufzeit. Sponsorensuche- und Betreuung, Ausschreibung, Wettbewerbsphase, Eingabenaufbereitung, Drucksachen (darunter ein rund 80-seitiges Programmheft), Drehbuch, Showclips, Ticketing und vieles mehr geh&ouml;ren zu unseren Aufgaben.</span></span></p><p style="margin-left:0cm; margin-right:0cm"><span style="font-size:11pt"><span style="font-family:Calibri,sans-serif">&nbsp;Darauf sind wir stolz. </span></span></p>'
+  button = "Get In Touch"
+  icon = "icon-bulb"
+  img = "img/references/31_slider_referenz.jpg"
   
   [[params.intro.item]]
   col_size = "col-3"
