--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -24,6 +24,12 @@ collections: # A list of collections the CMS should be able to edit
       -  {label: "Content", name: "content", widget: "string", required: false }
       -  {label: "Button Text", name: "button", widget: "string" }
       -  {label: "Bild URL", name: "img", widget: "string" }
+      -  label: "Carousel" 
+         name: "carousel"
+         widget: "list"
+         field:
+            -  {label: Image, name: imgsrc, widget: image}
+            -  {label: Description, name: imgalt, widget: string}
       -  {label: "Body", name: "body", widget: "markdown"}
 #   - name: "docs" # Used in routes, ie.: /admin/collections/:slug/edit
 #     label: "Docs" # Used in the UI, ie.: "New Post"
