--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -3,55 +3,81 @@ backend:
   repo: tobrr/bkmi
   branch: try_bkmi_bg
   squash_merges: true
-
 publish_mode: editorial_workflow
-
-media_folder: "/static/upload" # Folder where user uploaded files should go
-public_folder: "img"
-
-collections: # A list of collections the CMS should be able to edit
-  - name: "references"
-    label: "Referenzen"
-    label_singular: "Referenz"
-    folder: "/content/references"
+media_folder: /static/upload
+public_folder: img
+collections:
+  - name: references
+    label: Referenzen
+    label_singular: Referenz
+    folder: /content/references
     create: true
     fields:
-      -  {label: "Titel", name: "title", widget: "string" }
-      -  {label: "Col Size", name: "col_size", widget: "string" }
-      -  {label: "Kategorien", name: "categorie", widget: "string" }
-      -  {label: "Teasertext", name: "description", widget: "string", required: false }
-      -  {label: "Content URL", name: "content_url", widget: "string" }
-      -  {label: "Content", name: "content", widget: "string", required: false }
-      -  {label: "Button Text", name: "button", widget: "string" }
-      -  {label: "Bild URL", name: "img", widget: "string" }
-      -  label: "Carousel" 
-         name: "carousel"
-         widget: "list"
-         field:
-            -  {label: Image, name: imgsrc, widget: image}
-            -  {label: Description, name: imgalt, widget: string}
-      -  {label: "Body", name: "body", widget: "markdown"}
-#   - name: "docs" # Used in routes, ie.: /admin/collections/:slug/edit
-#     label: "Docs" # Used in the UI, ie.: "New Post"
-#     folder: "/content/docs" # The path to the folder where the documents are stored
-#     create: true # Allow users to create new documents in this collection
-#     fields: # The fields each document in this collection have
-#       - {label: "Title", name: "title", widget: "string", tagname: "h1"}
-#       - {label: "Group", name: "group", widget: "string"}
-#       - {label: "Weight", name: "weight", widget: "number"}
-#       - {label: "Body", name: "body", widget: "markdown"}
-  - name: "blog"
-    label: "Blog"
-    label_singular: "Post"
-    folder: "/content/blog"
+      - label: Titel
+        name: title
+        widget: string
+      - label: Col Size
+        name: col_size
+        widget: string
+      - label: Kategorien
+        name: categorie
+        widget: string
+      - label: Teasertext
+        name: description
+        widget: string
+        required: false
+      - label: Content URL
+        name: content_url
+        widget: string
+      - label: Content
+        name: content
+        widget: string
+        required: false
+      - label: Button Text
+        name: button
+        widget: string
+      - label: Bild URL
+        name: img
+        widget: string
+      - label: Carousel
+        name: carousel
+        widget: list
+        field:
+          - label: imgsrc
+            name: imgsrc
+            widget: string
+          - label: imgalt
+            name: imgalt
+            widget: string
+      - label: Body
+        name: body
+        widget: markdown
+  - name: blog
+    label: Blog
+    label_singular: Post
+    folder: /content/blog
     create: true
     fields:
-      - {label: "Title", name: "title", widget: "string", tagname: "h1"}
-      - {label: "Author", name: "author", widget: "string"}
-      - {label: "Description (for blog list)", name: "description", widget: "text"}
-      - {label: "Meta Description (defaults to Description)", name: "meta_description", widget: "text", required: false}
-      - {label: "Date", name: "date", widget: "date"}
-      - {label: "Body", name: "body", widget: "markdown"}
+      - label: Title
+        name: title
+        widget: string
+        tagname: h1
+      - label: Author
+        name: author
+        widget: string
+      - label: Description (for blog list)
+        name: description
+        widget: text
+      - label: Meta Description (defaults to Description)
+        name: meta_description
+        widget: text
+        required: false
+      - label: Date
+        name: date
+        widget: date
+      - label: Body
+        name: body
+        widget: markdown
   - name: updates
     label: Updates
     files:
@@ -63,9 +89,13 @@ collections: # A list of collections the CMS should be able to edit
             label: Releases
             widget: list
             fields:
-              - {name: version, label: Version}
-              - {name: date, label: Date, widget: date}
-              - {name: description, label: Description}
+              - name: version
+                label: Version
+              - name: date
+                label: Date
+                widget: date
+              - name: description
+                label: Description
       - name: notifications
         label: Notifications
         file: bkmi/data/notifications.yml
@@ -75,8 +105,18 @@ collections: # A list of collections the CMS should be able to edit
             label: Notifications
             widget: list
             fields:
-              - {label: Title, name: title, widget: string, tagname: h1}
-              - {label: Published, name: published, widget: boolean}
-              - {label: Loud, name: loud, widget: boolean}
-              - {label: Message, name: message, widget: text}
-              - {label: URL, name: url}
+              - label: Title
+                name: title
+                widget: string
+                tagname: h1
+              - label: Published
+                name: published
+                widget: boolean
+              - label: Loud
+                name: loud
+                widget: boolean
+              - label: Message
+                name: message
+                widget: text
+              - label: URL
+                name: url
