carousel entry on netlify cms

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -45,7 +45,7 @@ collections:
         field:
           - label: imgsrc
             name: imgsrc
-            widget: string
+            widget: file
           - label: imgalt
             name: imgalt
             widget: string
